2006-03-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: register an icon, improved
	tooltips, some minor cleanups.

2006-03-08  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c (find_max_blob): free the whole list instead of
	deleting it one element at a time.

2006-03-06  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplay.c (gimp_display_reconnect): keep a
	reference on the old image until the display is connected to the
	new one. Fixes bug #333568.

	* app/display/gimpdisplay-handlers.c: fixed typo in comment.

	* app/actions/file-commands.c: cosmetics.

2006-03-05  DindinX  <dindinx@gimp.org>

	* app/core/gimpimage-merge.c: fixed merge down (previously broken by a
	not that purely cosmetic change). Spotted by Amar Takhar.

2006-03-04  Sven Neumann  <sven@gimp.org>

	* app/dialogs/file-save-dialog.c (file_save_dialog_use_extension):
	use descriptive verbs in action buttons instead of Yes and No.

2006-03-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcolordisplayeditor.c
	* app/widgets/gimpcontrollereditor.c
	* app/widgets/gimpcontrollerlist.c: set tooltips dynamically.

2006-03-03  Sven Neumann  <sven@gimp.org>

	* app/dialogs/vectors-import-dialog.c (vectors_import_dialog_new)
	* app/widgets/gimpfiledialog.c (gimp_file_dialog_add_filters):
	fixed capitalization of filter names.

2006-03-03  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/fileops.pdb: 
	* app/dialogs/file-open-dialog.c
	* app/display/gimpdisplayshell-dnd.c
	* app/file/file-open.[ch]
	* app/widgets/gimplayertreeview.c: pass the selected load procedure
	to file_open_layer() or NULL if none is selected. Fixes bug #333207.

	* app/pdb/fileops_cmds.c: regenerated.

2006-03-02  Manish Singh  <yosh@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_query): use proper sentinel type
	for gtk_dialog_set_alternative_button_order. Fixes bug #330800.

2006-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_real_flush): made it a static