@@ -1,5 +1,10 @@
 2006-03-09  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/animationplay.c: also add the popup menu to the
+	standard playback window, not only to the detached one.
+
+2006-03-09  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/animationplay.c: register an icon, improved
 	tooltips, some minor cleanups.
 
